--- a/build.gradle
+++ b/build.gradle
@@ -10,21 +10,23 @@ ext {
     drivers = ["firefox", "chrome", "chromeHeadless"]
 
     ext {
-        gebVersion = '3.0.1'
+        groovyVersion = '2.4.12'
+        gebVersion = '2.1' //'3.0.1'
         seleniumVersion = '3.14.0'
-        chromeDriverVersion = '73.0.3683.68'
+        chromeDriverVersion = '76.0.3809.68' //'73.0.3683.68'
         geckoDriverVersion = '0.24.0'
     }
 }
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
     // If using Spock, need to depend on geb-spock
     testCompile "org.gebish:geb-spock:$gebVersion"
-    testCompile("org.spockframework:spock-core:1.3-groovy-2.5") {
+    testCompile("org.spockframework:spock-core:1.1-groovy-2.4") { //1.3-groovy-2.5
         exclude group: "org.codehaus.groovy"
     }
 
